[Update] 사용자 인증/인가 관련 로직 수정